# Discord_bot

./: .env.example  .gitignore  Dockerfile  README.md  YouTube_api.py  bot.py  dockerfile  nauka.json  olchus.py  podobienstwo_piosenek.h5  pyproject.toml  requirements.txt  tracks_info.json  wynik.json  wynik2.json  wynik3.json  wynik4.json
bot/: bot.py
bot/bot_datas/: data.json
music_recomendation/: AI.py  neural_network.h5  new_parameters.py  song_analize.py
music_recomendation/connection/: connection.py
music_recomendation/datas/: genres.txt
music_recomendation/datas/results/: result.json  result2.json  result3.json  result4.json
music_recomendation/music_app/: neural.py  new_parameters.py  song_analize.py
music_recomendation/neural_network/: neural_network.h5
polecenie_muzyki/: AI.py  README.md  gatunek.json  gatunki.txt  pobranie_piosenki.py  podobienstwo_piosenek.h5  polecenie_muzyki.py  testy.py  zwrócenie_piosenki.py
results/: result.json  result2.json  result3.json  result4.json
