[tool.poetry]
name = "discord-bot"
version = "1.2.0"
description = "Bot na Discorda"
authors = ["0lch4 <127250399+0lch4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
discord = "^2.2.2"
spotipy = "^2.23.0"
ffmpeg = "^1.4"
tensorflow-io = "^0.31.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
numpy = "^1.23.5"
tensorflow = "^2.12.0"
PyNaCl = "^1.5.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
